examples/test/testpolicy4035.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4035
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key0: value8
      key15: value21
      key44: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value31
          key37: value24
      podSelector:
        matchLabels:
          key7: value19
